
{{$NEXT}}

1.20130625 2013-06-24 America/Los_Angeles

 - added a bunch of tests from http://dmarc-qa.com
 - URI: supress undef error if URI scheme not defined
 - policy->parse: properly parse records with unnecessary trailing ;
 - reporting is 'external' based on Org Domain (was email domain)

1.20130616 2013-06-16 America/Los_Angeles

 - combined update/replace SQL methods
 - dmarc_view_reports: fix duplicated variable name

1.20130615 2013-06-15 America/Los_Angeles

 - bug fixes and purge unused classes

1.20130614 2013-06-13 America/Los_Angeles

 - Added whitelist feature
 - SMTP: remove Subject: Report-ID <braces>
 - SMTP: more types of SMTP errors are stored and reported
 - dmarc_send_reports: added verbose option
 - dmarc_view_reports: fix for searches with MySQL backend

1.20130612 2013-06-11

 -  dmarc_view_reports: improve gentoo support by adding /usr
    to search path for GeoIP DBs on gentoo - Benny Pedersen

1.20130610 2013-06-10

 - tolerate receiving reports with no records (ahem, hotmail.com)
 - simplify SMTP flow-of-control, additional SMTP tests
 - avoid the join/split of binip in SQL::populate_agg_records
 - replace carp with warn in several places (more legible warning)
 - added RUA validity checks to dmarc_lookup

1.20130605 2013-06-05

 - in aggregate reports, group by IP and auth results (was only IP)
 - refactored SQL::retrieve_todo into 3 methods, added tests
 - SQL: added unique constraint on domain.domain

1.20130604 2013-06-04

 - main branches are master (devel) and releases (more obvious)
 - added mailing list impact FAQ
 - SQL: removed record.rcpt_dom
 - corrected a XML schema error
 - index.html
    - widened disposition column
    - only show rcpt domain in record (subgrid)
    - corrected subgrid row_id
 - additional validation of aggregate reports

1.20130601 2013-05-31

 - make sure a report record exists when fetching SMTP todo
 - added insecure SMTP fallback if STARTTLS fails
 - added color coded results to HTTP grid
