@@ -1,6 +1,8 @@
 
 {{$NEXT}}
 
+ - updated install_deps.pl
+
 1.20130625 2013-06-24 America/Los_Angeles
 
  - added a bunch of tests from http://dmarc-qa.com
